--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,26 +1,35 @@
-div {
+
+h1 {
+    text-align: center;
+    padding: 30px;
     background-color: #A8D1D1;
-    padding: 1rem;
 }
 
-.song {
+.rankings {
+    padding: 20px;
+    margin-bottom: 16px;
     background-color: #FD8A8A;
-    margin: 16px;
-    padding: 8px;
 }
 
-li {
-    list-style-type: none;
-}
-
-/*
-li:nth-child(odd) {
+.container:hover {
+    transform: scale(1.02);
     font-weight: bold;
 }
-*/
 
-li>div:hover {
-    font-weight: bold;
-    font-size: 1.1rem;
-    background-color: #F1F785;
+
+.container {
+    position: relative;
+}
+
+a {
+    color: white;
+}
+
+.song-title {
+    position: absolute;
+    width: 568px;
+    bottom: 5px;
+    padding: 16px;
+    text-align: center;
+    background-color: rgba(0,0,0, 0.5);
 }
